--- a/style.css
+++ b/style.css
@@ -14,6 +14,9 @@
 
 }
 
+html{
+    height: 100%;
+}
 
 table{
     border-collapse: collapse;
@@ -21,6 +24,7 @@ table{
     margin: auto;
     margin-top: 10px;
     padding: 10px;
+    margin-bottom: 10px;
 }
 
 
@@ -39,12 +43,25 @@ td.preta{
 td:hover{
     background-color: yellow;
 }
-td:active{
-    background-color: deepskyblue;
-}
 
 #8{
     background-color: blanchedalmond;
+}
+footer{
+    padding: 6px;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: white;
+    color: black;
+    border: 2px solid black;
+    max-height: 50px;
+    text-align: center;
+    width: 50%;
+    display: inline-block;
+
+}
+footer p, footer jogador{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17pt;
 }
 
 
