--- a/style.css
+++ b/style.css
@@ -18,9 +18,16 @@ html{
     height: 100%;
 }
 
+body{
+    background-image: url("https://images.pexels.com/photos/326311/pexels-photo-326311.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"), url("./resources/background1.jpg");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
+
 table{
     border-collapse: collapse;
-    box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.199);
+    box-shadow: 15px 15px 15px rgba(0, 0, 0, 0.555);
     margin: auto;
     margin-top: 10px;
     padding: 10px;
@@ -32,36 +39,36 @@ td{
     border: 1px solid black;
     width: 50px;
     height: 50px;
-    background-color: white;
+    background-color: beige;
     padding: 12px;
 }
 
+
 td.preta{
-    background-color: rgb(255, 153, 0);
+    background-color: rgb(186, 140, 99);
 }
 
 td:hover{
     background-color: yellow;
 }
 
-#8{
-    background-color: blanchedalmond;
-}
+
 footer{
     padding: 6px;
     font-family: Arial, Helvetica, sans-serif;
-    background-color: white;
-    color: black;
-    border: 2px solid black;
+    background-color: beige;
+    color: rgb(30, 30, 30);
+    border: 2px solid rgb(30, 30, 30);
     max-height: 50px;
     text-align: center;
-    width: 50%;
+    width: 43%;
     display: inline-block;
 
 }
 footer p, footer jogador{
     font-family: Arial, Helvetica, sans-serif;
     font-size: 17pt;
+    font-weight: lighter;
 }
 
 
